--- a/max8-standalone/server/package.json
+++ b/max8-standalone/server/package.json
@@ -1,13 +1,15 @@
 {
   "name": "server",
+  "main": "main.ts",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "start": "tsx main.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.1",
     "hono": "^4.6.3"
   },
   "devDependencies": {
+    "@types/max-api": "^2.0.3",
     "@types/node": "^20.11.17",
     "tsx": "^4.7.1"
   }
