--- a/max8-standalone/server/package.json
+++ b/max8-standalone/server/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "server",
-  "main": "main.ts",
+  "name": "api",
+  "main": "src/main.ts",
   "scripts": {
-    "start": "tsx main.ts"
+    "start": "tsx src/main.ts",
+    "build:css": "tailwindcss -i ./src/styles.css -o ./public/styles.css --minify"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.1",
     "hono": "^4.6.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.2",
     "@types/max-api": "^2.0.3",
     "@types/node": "^20.11.17",
+    "daisyui": "^4.12.10",
+    "tailwindcss": "^3.4.13",
     "tsx": "^4.7.1"
   }
 }
